<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_darker"
    tools:context=".ui.ComicDetailsActivity">

    <ImageView
        android:id="@+id/ivComicBanner"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:contentDescription="@string/comic_thumbnail"
        android:scaleType="centerCrop"
        android:src="@drawable/splash_screen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivComicCover"
        android:layout_width="98dp"
        android:layout_height="160dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="88dp"
        android:background="@color/white"
        android:contentDescription="@string/comic_thumbnail"
        android:padding="3dp"
        android:scaleType="fitXY"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/splash_screen" />

    <ImageButton
        android:id="@+id/btnBack"
        android:layout_width="40sp"
        android:layout_height="40sp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@color/transparent"
        android:contentDescription="@string/go_back"
        android:scaleType="fitXY"
        android:src="@drawable/ic_baseline_arrow_back_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="65dp"
        android:orientation="vertical"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivComicBanner">

        <TextView
            android:id="@+id/tvComicTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="TITLE PLACEHOLDER #0"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="bold"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/tvComicDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Neque viverra justo nec ultrices dui sapien. Quis varius quam quisque id diam vel quam elementum pulvinar. Est ullamcorper eget nulla facilisi etiam dignissim diam quis."
            android:textColor="@color/white"
            android:textSize="18sp"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/tvComicPublishDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/published_template"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvComicPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price_template"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvComicPages"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pages_template"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>